  (at least it doesn't crash anymore and resizes correctly :-)

Reggie, 27.3.1999:
------------------
- Implemented joining table cells in vertical direction
  (only the auto-resize of vertical joined table cells screws
   up a table a bit - will fix it)

Reggie, 28.3.1999:
------------------
- Clicking on joined/hidden tables cells works correctly now
- Some menu items/toolbar pics for table manipulations get disabled/enabled
  correctly to avoid mistakes by the user

Reggie, 29.3.1999:
------------------
- For joining cells it's not required anymore to put the cursor
  into the table first
- Implemented splitting cells - this means you can only split a joined
  cell yet, no "normal" cells. I'll improve that later.
- Prepeared everything for context sensitive right button menus

Reggie, 1.4.1999:
-----------------
- Started implementing footnotes and endnotes

Reggie, 2.4.1999:
-----------------
- Some cleanups
- Much more work on footnotes/endnotes

Reggie, 3.4.1999:
-----------------
- More work on footnotes:
  - Inserting simple footnotes works
  - Footnote-Manager calculates/updates numbers correctly
  - Implemented Formatting/Displaying
- Fixed formatting of inserted variables

Reggie, 4.4.1999:
-----------------
- More work on footnotes/endnotes
  - Implemented Removing footnotes/endnotes
  - When removing footnotes/endnotes, the Footnote-Manager
    updates the numbers correctly
  - Speed improvement and fix for calculation the start number of a new footnote
- Improved and fixed some stuff in KWString
- Fix in KWordView::setFormat (doesn't segfault in stupid cases anymore)

Reggie, 5.4.1999:
-----------------
- More work on footnotes/endnotes
- Started with Drag'n'Drop (dragging a selected text from one KWord App and dropping
  it into another KWord App works already somehow)

Reggie, 6.4.1999:
-----------------
- Started with a dialog for inserting a footnote where you can make crazy footnotes
  if you want (like [1,2,3-6,7] and so on)